syntax = "proto3";

package GrpcDeviceCatalog;

service DeviceCatalog {
  rpc GetCatalog (GetCatalogRequest) returns (GetCatalogReply) {}
  rpc DeviceCatalogSubscribe (DeviceCatalogSubscribeRequest) returns (DeviceCatalogSubscribeReply) {}
}

// The request message.
message GetCatalogRequest {
	string deviceid = 1;
}

// The response message.
message GetCatalogReply {
  string message = 1;
}

// The request message.
message DeviceCatalogSubscribeRequest {
	string deviceid = 1;
}

// The response message.
message DeviceCatalogSubscribeReply {
  string message = 1;
}
